# mdformat-editorconfig

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
mdformat_editorconfig/: __init__.py  config.py  plugin.py
tests/: fixtures.md  test_editorconfig.py  test_fixtures.py
