[build-system]
requires = ["flit_core >=3.2.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mdformat_editorconfig"
authors = [
    { name = "Joseph Monaco", email = "joe@selfmotion.net" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
]
keywords = ["mdformat", "markdown", "formatter", "editorconfig", "indentation"]
requires-python = ">=3.10"
dependencies = [
    "mdformat>=0.7.0",
    "editorconfig>=0.12.0",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/jdmonaco/mdformat-editorconfig"

[project.entry-points."mdformat.parser_extension"]
editorconfig = "mdformat_editorconfig"

[tool.flit.sdist]
include = []
exclude = [".github/", "tests/", "dev/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
